# papervizagent

./: demo.py  pyproject.toml
agents/: critic_agent.py  planner_agent.py  polish_agent.py  retriever_agent.py  stylist_agent.py  vanilla_agent.py  visualizer_agent.py
utils/: config.py  generation_utils.py  paperviz_processor.py
