[project]
name = "papervizagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.93.0",
    "asyncio>=4.0.0",
    "datasets>=4.8.4",
    "google-auth>=2.49.2",
    "google-genai>=1.72.0",
    "json-repair>=0.59.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.56.0",
    "tqdm>=4.67.3",
]
